ie6 layout bugs

--- a/app/webroot/static/experimental/css/viewproject.css
+++ b/app/webroot/static/experimental/css/viewproject.css
@@ -31,7 +31,6 @@ body {
  width: auto;
  height: auto;
  float: right;
- clear: left;
  padding: 5px;
  font-size: 11px;
  font-weight: bold;
